--- a/img/index.html
+++ b/img/index.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <div id="headerpost" >
-            <img src="img/twice.png" alt="TWICE">
+            <img src="img/TWICE2.png" alt="TWICE">
             <div id="lead">
                 <h2>歡迎來到翎嘉的小天地</h2>
                 <p>2017年入坑了韓國三大公司的TWICE，每天聽他們的歌至今已有5年之久，她們真的是非常優質的idol，快來跟著我一起認識TWICE吧!!</p>
